MSVC: add flag to skip warnings about missing .pdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ endif()
 
 if ( MSVC )
   add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX -wd4996)
-  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:30000000")
+  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099 /STACK:30000000")
 else()
   add_definitions(-Wall)
   add_definitions(-std=c++11)
