--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,19 @@ if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif()
 
+set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_EXTENSIONS Off)
+set (CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
 if ( MSVC )
   add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX -wd4996)
   set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099 /STACK:30000000")
 else()
   add_definitions(-Wall)
-  add_definitions(-std=c++11)
   add_definitions(-DBOOST_TEST_DYN_LINK)
+  if (CMAKE_VERSION VERSION_LESS 3.1)
+    add_definitions(-std=c++11)
+  endif ()
 endif()
 
 option(EXTERNAL_LIBOSMIUM "Do not use the bundled libosmium" OFF)
