Added -x osm2psql_exe_name option to regression test script remove exe-copying from cmake build scripts

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,7 +57,7 @@ set_property(TEST test-output-pgsql PROPERTY LABELS FlatNodes)
 find_package(PythonInterp)
 
 if (PYTHONINTERP_FOUND)
-  add_test(NAME regression-test-pbf COMMAND ${PYTHON_EXECUTABLE} tests/regression-test.py -f tests/liechtenstein-2013-08-03.osm.pbf
+  add_test(NAME regression-test-pbf COMMAND ${PYTHON_EXECUTABLE} tests/regression-test.py -f tests/liechtenstein-2013-08-03.osm.pbf -x $<TARGET_FILE:osm2pgsql>
     WORKING_DIRECTORY ${osm2pgsql_SOURCE_DIR})
   set_tests_properties(regression-test-pbf PROPERTIES TIMEOUT ${TESTING_TIMEOUT})
   message(STATUS "Added test: regression-test-pbf (needs Python with psycopg2 module)")
