Remove CMake-language block-end command arguments
This uses the commands as used in CMake commit
9db3116226cb99fcf54e936c833953abcde9b729 to get a consistent CMake style, with
just some file names and paths adjusted to this repository:

for c in else endif endforeach endfunction endmacro endwhile; do
    echo 's/\b'"$c"'\(\s*\)(.\+)/'"$c"'\1()/'
done >convert.sed &&
git ls-files -z -- '*.cmake' '*CMakeLists.txt' |
egrep -z -v '^(contrib/|cmake/)' |
xargs -0 sed -i -f convert.sed &&
rm convert.sed

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,7 +36,7 @@ foreach (test ${TESTS})
   add_dependencies(check ${test_name})
   message(STATUS "Added test: ${test_name}...")
   set_tests_properties(${test_name} PROPERTIES TIMEOUT ${TESTING_TIMEOUT})
-endforeach(test)
+endforeach()
 
 set(TEST_NODB
  test-expire-tiles
