--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(PACKAGE osm2pgsql)
 set(PACKAGE_NAME osm2pgsql)
-set(PACKAGE_VERSION 0.90.0-RC1)
+set(PACKAGE_VERSION 0.91.0-dev)
 
 cmake_minimum_required(VERSION 2.8.7)
 
