--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,13 +100,9 @@ find_package(Osmium REQUIRED COMPONENTS io geos proj)
 include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS})
 
 if (WITH_LUA)
-  find_package(Lua)
-  if (LUA_FOUND)
-    include_directories(${LUA_INCLUDE_DIR})
-    set(HAVE_LUA 1)
-  else()
-    message(STATUS "lua libraries not found. You will NOT be able to use lua scripts for tag transform.")
-  endif()
+  find_package(Lua REQUIRED)
+  include_directories(${LUA_INCLUDE_DIR})
+  set(HAVE_LUA 1)
 endif()
 
 if (MSVC)
