--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,15 +32,15 @@ install:
   # by default, all script lines are interpreted as batch
   - cd c:\
   - mkdir libs
-  - curl -O https://dl.dropboxusercontent.com/u/63393258/libs_osm2pgsql_%Configuration%.7z
-  - 7z x libs_osm2pgsql_%Configuration%.7z | find ":"
+  - curl -O http://lonvia.de/osm2pgsql_win_deps.7z
+  - 7z x osm2pgsql_win_deps.7z | find ":"
 
 build_script:
   - mkdir c:\osm2pgsql\build
   - cd c:\osm2pgsql\build
   - echo Running cmake...
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
-  - cmake .. -LA -G "NMake Makefiles" -DBOOST_ROOT=%BOOST_ROOT% -DCMAKE_BUILD_TYPE=%Configuration% -DCMAKE_INSTALL_PREFIX=%PREFIX% -DBoost_USE_STATIC_LIBS=ON -DBUILD_TESTS=ON -DBoost_ADDITIONAL_VERSIONS=1.57;1.58;1.59
+  - cmake .. -LA -G "NMake Makefiles" -DBOOST_ROOT=%BOOST_ROOT% -DCMAKE_BUILD_TYPE=%Configuration% -DCMAKE_INSTALL_PREFIX=%PREFIX% -DBoost_USE_STATIC_LIBS=ON -DBUILD_TESTS=ON -DBZIP2_LIBRARY_RELEASE=C:/libs/lib/libbz2.lib -DZLIB_LIBRARY=C:\libs\lib\zlibwapi.lib
   - nmake
   - mkdir osm2pgsql-bin
   - copy /y *.exe osm2pgsql-bin
@@ -58,10 +58,6 @@ test_script:
   - cd c:\osm2pgsql\build
   - ctest -VV -L NoDB
 #  - ctest -VV -LE FlatNodes # enable when Postgis will be available
-
-#deploy_script:
-#  - cd c:\build
-#  - curl -T osm2pgsql_%Configuration%.zip --user %ACCOUNT% https://webdav.yandex.ru/libs/osm2pgsql_%Configuration%.zip
 
 artifacts:
   - path: osm2pgsql_Release.zip
